fix spacing issues for upsell products

--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -19,6 +19,11 @@
 
   &__dots {
     text-align: center;
+    padding-top: 20px;
+
+    @include media-tablet-and-up {
+      padding-top: 40px;
+    }
 
     li {
       display: inline;
